namespace First_Lab.Num3.Units.Passanger;

public abstract class Passenger
{
    public string Name;
    public int Age;
    public abstract Decimal GetTicketPrice();
}


